<resources>
    <string name="app_name_test">1.0-Найди свой поезд</string>
    <string name="app_name">Найди свой поезд</string>
    <string name="search_train">Найти поезд</string>
    <string name="settings_data_title">Данные для поиска</string>

    <string name="message_expired_date">Дата для поиска уже прошла</string>
    <string name="message_empty_list">Поезда не найдены. Попробуйте изменить параметры поиска</string>
    <string name="message_no_data_for_search">Для поиска поездов возпользуйтесь главной кнопкой</string>
    <string name="message_searching_now">Идет поиск поездов по Вашему запросу</string>

    <string name="from">От</string>
    <string name="to">До</string>
    <string name="place_number">Наличие мест</string>
    <string name="periodic">Проверять периодически</string>
    <string name="search">Искать</string>
    <string name="save">Сохранить</string>
    <string name="date">Дата</string>
    <string name="input_date">Дата</string>
    <string name="input_time">Время</string>
    <string name="all_place">Всех</string>
    <string name="title_time_from">Отправления от</string>
    <string name="title_train_number">Номер поезда</string>
    <string name="title_adding_panel">Больше параметров</string>

    <string name="places">Свободные места</string>

    <string name="notification_title">Найдены поезда</string>
    <!--  <string name="error_station_to">Выберете станцию прибытия из списка</string>
    <string name="error_station_to">Выберете станцию прибытия из списка</string>-->

    <string name="error_date">Выберете дату</string>
    <string name="error_station_from">Выберете станцию отправления из списка</string>
    <string name="error_station_to">Выберете станцию прибытия из списка</string>


    <string name="period_half_hour">пол часа</string>
    <string name="period_one_hour">1 час</string>
    <string name="period_two_hour">2 часа</string>
    <string name="period_three_hour">3 часа</string>
    <string name="period_one_day">1 день</string>
    <string name="period_one_week">1 неделя</string>

    <string name="action_task_context_delete">Удалить</string>
    <string name="title_activity_task_list">Маршруты для поиска</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_settings">Настройки</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Уведомления</string>

    <string name="pref_title_new_message_notifications">Сообщать о новом уведомлении</string>

    <string name="pref_title_ringtone">Рингтон</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Использовать вибрацию</string>

    <string name="pref_title_sound">Использовать для уведомлений  мелодию</string>


    <string name="pref_title_category_notif">Настройки уведомленний</string>
    <string name="pref_key_vibrate">pref_vibrate</string>
    <string name="pref_key_type_ringtone">pref_type_ringtone</string>
    <string name="pref_key_uri_ringtone">pref_uri_ringtone</string>

    <string name="pref_key_duration">pref_key_duration</string>
    <string name="pref_title_duration">Уведомлять как важное</string>
    <string name="pref_summary_duration">Продолжать уведомления пока пользователь не увидет его</string>

    <string name="pref_type_sound_ring">Звонка</string>
    <string name="pref_type_sound_notification">Уведомления </string>
    <string name="pref_type_sound_alarm">Будильника</string>
    <string name="pref_type_sound_melody">Выбрать мелодию</string>


</resources>
