<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--<ImageView
            android:id="@+id/image2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_lock_static"
            tools:ignore="ContentDescription" />-->
        <!--   <TextView
               android:id="@+id/message"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/search_train"
               android:textAppearance="?android:attr/textAppearanceLarge" />-->

        <!--        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">-->


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_station_from"
                style="@style/NormalHintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/ActivedHintText">

                <proj.kolot.uzsearch.utils.DelayAutoCompleteTextView
                    android:id="@+id/station_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/from"
                    android:imeOptions="flagNoExtractUi|actionSearch"
                    android:inputType="textCapSentences"
                    android:paddingRight="32dp"
                    android:textAppearance="@style/FieldFont"
                    android:theme="@style/CustomEditText" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_bar_from"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_station_to"
                style="@style/NormalHintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/ActivedHintText">

                <proj.kolot.uzsearch.utils.DelayAutoCompleteTextView
                    android:id="@+id/station_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/to"
                    android:imeOptions="flagNoExtractUi|actionSearch"
                    android:inputType="textCapSentences"
                    android:paddingRight="32dp"
                    android:textAppearance="@style/FieldFont"
                    app:theme="@style/CustomEditText" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_bar_to"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:visibility="gone" />
        </FrameLayout>
        <!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                style="@style/TitleFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Date" />

            <Button
                android:id="@+id/showDate"
                style="@style/FieldFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/input_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/title_number"
                style="@style/TitleFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="3dp"
                android:text="@string/place_number" />


            <ImageButton
                android:id="@+id/btn_add_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sets_of_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/periodic" />

            <CheckBox
                android:id="@+id/check_periodically"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </LinearLayout>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search" />
    </LinearLayout>
</ScrollView>